--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tanstack/react-query": "4",
     "jotai": "^2.10.3",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@tanstack/eslint-plugin-query": "4",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
