--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "4",
+    "date-fns": "^4.1.0",
     "jotai": "^2.10.3",
     "path": "^0.12.7",
     "react": "^18.3.1",
