--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jotai": "^2.10.3",
     "path": "^0.12.7",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2"
   },
